--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,21 @@
-<%= button_to 'Bookを登録', new_book_path, method: :get, class: 'btn btn-primary' %>
+<div class="wrapper book_index">
+  <hr class="bold">
+  
+  <div class="header">
+    Bookリスト
+  </div>
+  <%= render 'books/social_buttons', url: request.url %>
+  
+  <hr>
+  
+  <div>
+    <%= button_to 'Bookを登録', new_book_path, method: :get, class: 'btn btn-primary' %>
+  </div>
+  
+  <ul class="grid_wrapper clearfix">
+    <% @books.each do |book| %>
+      <%= render 'books/grid', book: book %>
+    <% end %>
+  </ul>
+
+</div>
