--- a/app/views/books/_grid.html.erb
+++ b/app/views/books/_grid.html.erb
@@ -5,13 +5,15 @@
 <li class="grid">
   
   <% if book %>
-    <div class="image">
-      <% if book.image? %>
-        <%= image_tag book.image.url %>
-      <% else %>
-        <div class="empty">No image</div>
-      <% end %>
-    </div>
+    <%= link_to book_path(book.id) do %>
+      <div class="image">
+        <% if book.image? %>
+          <%= image_tag book.image.url %>
+        <% else %>
+          <div class="empty">No image</div>
+        <% end %>
+      </div>
+    <% end %>  
     <div class="title">
       <%= book.title %>
     </div>
