--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -2,7 +2,7 @@ div.login_logout_wrapper {
   text-align: right;
 }
 
-div.wrapper.book_index {
+div.wrapper.book_index, div.wrapper.book_show {
   margin-top: 0;
   width: 1000px;
 
@@ -26,7 +26,9 @@ div.wrapper.book_index {
   hr.bold {
     border-top: 3px solid;
   }
+}
 
+div.wrapper.book_index {
   ul.grid_wrapper {
     margin-top: 20px;
     margin-bottom: 10px;
@@ -38,6 +40,9 @@ div.wrapper.book_index {
       background-color: antiquewhite;
       list-style: none;
       float: left;
+      a {
+        color: black;
+      }
       div.image {
         width: 230px;
         height: 280px;
@@ -65,6 +70,33 @@ div.wrapper.book_index {
         height: 22px;
         margin-bottom: 10px;
       }
+    }
+  }
+}
+
+div.wrapper.book_show {
+  div.bookmark_and_social {
+    margin-bottom: 10px;
+  }
+
+  div.edit {
+    margin-bottom: 10px;
+    div.button_wrapper {
+      float: right;
+      margin-right: 5px;
+    }
+  }
+  div.image {
+    img {
+      width: 100%;
+      height: 100%;
+    }
+    div.empty {
+      background-color: #ccc;
+      width: 100%;
+      height: 100%;
+      line-height: 260px;
+      text-align: center;
     }
   }
 }
