--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,61 @@
-<div class="header">
+<div class="wrapper book_show">
   <%= link_to 'Bookリストに戻る', root_path %>
+
+  <hr>
+
+  <div class="header">
+    <%= @book.title %>
+  </div>
+  
+  <div class="bookmark_and_social">
+    <%= render 'books/social_buttons', url: request.url %>
+  </div>
+  
+  <% if user_signed_in? && @book.user_id == current_user.id %>
+    <div class="edit clearfix">
+      <div class="button_wrapper">
+        <%= button_to '削除', book_path(@book.id), method: :delete, class: 'btn btn-danger', data: {confirm: '削除してよろしいですか？'} %>
+      </div>
+      <div class="button_wrapper">
+        <%= button_to '編集', edit_book_path(@book.id), method: :get, class: 'btn btn-primary' %>
+      </div>
+    </div>
+  <% end %>
+
+  <div class="row">
+    
+    <div class="col-sm-4">
+      <div class="image">
+        <% if @book.image? %>
+            <%= image_tag @book.image.url %>
+        <% else %>
+            <div class="empty">No image</div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="col-sm-8">
+      <div class="author">
+        <%= label :book, :author %>: <%= @book.author %>
+      </div>
+      <div class="publisher">
+        <%= label :book, :publisher %>: <%= @book.publisher %>
+      </div>
+
+      <div class="price">
+        <%= label :book, :price %>: ¥<%= @book.price.to_s(:delimited) %>
+      </div>
+
+      <div class="publish_date">
+        <%= label :book, :publish_date %>: <%= @book.publish_date.strftime('%Y年%m月%d日') %>
+      </div>
+
+      <div class="caption">
+        <%= label :book, :caption %>: <%= @book.caption %>
+      </div>
+    </div>
+
+  </div>
+
 </div>
+
