--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,8 +7,17 @@
     <%= @book.title %>
   </div>
   
-  <div class="bookmark_and_social">
+  <div class="bookmark_and_social clearfix">
     <%= render 'books/social_buttons', url: request.url %>
+    <% if user_signed_in? %>
+      <div class="bookmark">
+        <% if @my_bookmark %>
+          <%= button_to 'ブックマーク解除', bookmark_path(@my_bookmark.id), method: :delete, class: 'btn btn-danger' %>
+        <% else %>
+          <%= button_to 'ブックマーク', bookmarks_path(bookmark: {book_id: @book.id}), clas: 'btn btn-primary' %>
+        <% end %>
+      </div>
+    <% end %>  
   </div>
   
   <% if user_signed_in? && @book.user_id == current_user.id %>
@@ -52,6 +61,12 @@
 
       <div class="caption">
         <%= label :book, :caption %>: <%= @book.caption %>
+      </div>
+      
+      <div class="info">
+        <div class="bookmark">
+          ♥ <%= @book.bookmarks.length %>
+        </div>
       </div>
     </div>
 
