--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -116,7 +116,49 @@ div.wrapper.book_show {
         margin-right: 5px;
       }
     }
-  }  
+  }
+  div.review_list {
+    margin-top: 5px;
+    div.review {
+      width: 100%;
+      margin-top: 10px;
+      div.thumbnail {
+        float: left;
+        width: 100px;
+        height: 100px;
+        div.no_thumbnail {
+          width: 100%;
+          height: 100%;
+          background-color: #ccc;
+        }
+      }
+      div.review_contents {
+        float: left;
+        width: 850px;
+        height: 100px;
+        margin-left: 10px;
+        div.review_header {
+          width: 100%;
+          height: 35px;
+          font-weight: bold;
+          div.rank {
+            display: inline-block;
+            margin-left: 10px;
+          }
+          div.delete {
+            float: right;
+          }
+        }
+        div.review_body {
+          width: 100%;
+          height: 65px;
+          margin-top: 5px;
+          font-style: italic;
+          padding: 3px;
+        }
+      }
+    }
+  }
 }
 
 div.wrapper.book_input {
