--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -117,6 +117,28 @@ div.wrapper.book_show {
       }
     }
   }
+  
+  div.my_review_wrapper {
+    margin-top: 20px;
+    div.footer_menu {
+      margin-top: 10px;
+      div.rank {
+        float: left;
+        label {
+          margin-left: 10px;
+        }
+        select {
+          margin-left: 10px;
+          display: inline-block;
+          width: 50px;
+        }
+      }
+      div.review_post {
+        float: right;
+      }
+    }
+  }
+  
   div.review_list {
     margin-top: 5px;
     div.review {
@@ -163,4 +185,21 @@ div.wrapper.book_show {
 
 div.wrapper.book_input {
   margin-top: 0;
+}
+
+div.filter {
+  > div {
+    width: 33%;
+    display: inline-block;
+    text-align: center;
+  }
+  a {
+    color: black;
+  }
+  div.bold {
+    font-weight: bold;
+    a {
+      color: blue;
+    }
+  }
 }
