--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,17 +7,8 @@
     <%= @book.title %>
   </div>
   
-  <div class="bookmark_and_social clearfix">
+  <div class="bookmark_and_social">
     <%= render 'books/social_buttons', url: request.url %>
-    <% if user_signed_in? %>
-      <div class="bookmark">
-        <% if @my_bookmark %>
-          <%= button_to 'ブックマーク解除', bookmark_path(@my_bookmark.id), method: :delete, class: 'btn btn-danger' %>
-        <% else %>
-          <%= button_to 'ブックマーク', bookmarks_path(bookmark: {book_id: @book.id}), clas: 'btn btn-primary' %>
-        <% end %>
-      </div>
-    <% end %>  
   </div>
   
   <% if user_signed_in? && @book.user_id == current_user.id %>
@@ -62,44 +53,9 @@
       <div class="caption">
         <%= label :book, :caption %>: <%= @book.caption %>
       </div>
-      
-      <div class="info">
-        <%= render 'books/info', book: @book %>
-      </div>
     </div>
 
   </div>
-  
-  <div class="my_review_wrapper">
-    <% if @my_review %>
-        <%= form_for @my_review do |f| %>
-            <%= f.text_area :body, class: 'form-control', rows: 3, placeholder: 'レビューを書く' %>
-            <div class="footer_menu clearfix">
-              <div class="rank">
-                <%= f.label :rank %> <%= f.select :rank, 5.downto(1).map { |m| [m, m] }, {}, class: 'form-control' %>
-              </div>
-              <div class="review_post">
-                <%= f.submit 'レビュー', class: 'btn btn-primary' %>
-              </div>
-            </div>
-            <%= f.hidden_field :book_id, value: @book.id %>
-        <% end %>
-    <% elsif user_signed_in? %>
-        <b>レビュー済みです</b>
-    <% end %>
-  </div>
-
-  <hr>
-
-  <div class="review_wrapper">
-    レビュー数 <%= @book.reviews.length %>件
-
-    <div class="review_list">
-      <% @book.reviews.each do |review| %>
-          <%= render 'books/review', review: review %>
-      <% end %>
-    </div>
-  </div>  
 
 </div>
 
