--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,6 +17,14 @@
     <hr>
   <% end %>
   
+  <ul class="category">
+    <% @categories.each do |category| %>
+      <li><%= link_to category.name, root_path(ft: params[:ft], filter_category_id: category.id) %></li>
+    <% end %>
+  </ul>
+  
+  <hr>
+  
   <div>
     <%= button_to 'Bookを登録', new_book_path, method: :get, class: 'btn btn-primary' %>
   </div>
