--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -53,6 +53,10 @@
       <div class="caption">
         <%= label :book, :caption %>: <%= @book.caption %>
       </div>
+      
+      <div class="category">
+        <%= label :book, :category %>: <%= @book.category.name %>
+      </div>
     </div>
 
   </div>
