--- a/app/views/books/_input.html.erb
+++ b/app/views/books/_input.html.erb
@@ -52,6 +52,11 @@
       <%= f.hidden_field :image_cache %>
     </div>
     
+    <div class="form-group">
+      <%= f.label :category %><br/>
+      <%= f.collection_select :category_id, Category.all, :id, :name %>
+    </div>
+    
     <div class="actions">
       <%= f.submit "登録", class: 'btn btn-primary' %>
     </div>
